# project5

./: README.md  pyproject.toml  requirements.txt
cluster/: kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
